# aisdecoder

./: .gitignore  Makefile  README.md  features-roadmap.md  pyproject.toml
.github/workflows/: ci.yml  python-package.yml
data/MaritimeIdentificationDigits/: mids.txt  mids2json.py
scripts/: aiscat.sh  cog_stats.sh  extract_col_csv.py  histo-simple.sh  parse-one-message.py  vdm2json.py
src/aisdecoder/: __init__.py  ais_kinematic_message.py  ais_message.py  ais_message_123.py  ais_message_18.py  ais_message_19.py  ais_message_5.py  correlate_static_iterator.py  create_message_helper.py  error.py  exceptions.py  message_errors.py  message_factory.py  sentence_error_report.py  vdm_sentence.py  vdm_sentence_factory.py  vdm_sentence_structure.py
src/aisdecoder/basictypes/: basic_types.py  mmsi.py
src/aisdecoder/cli/: main.py
src/aisdecoder/filters/: filter.py  filter_bbox.py
src/aisdecoder/filters/sqllikefilter/: aisql.g4  aisql.interp  aisqlLexer.interp  aisqlLexer.py  aisqlLexer.tokens  aisqlListener.py  aisqlParser.py  aisqlVisitor.py  aisql_visitor_impl.py  sqllikefilter.py
src/aisdecoder/writers/: density_map.py  writer.py  writer_csv.py  writer_stats.py
tests/unit/: test_ais_kinematic_message.py  test_ais_message.py  test_ais_message_123.py  test_correlate_static_iterator.py  test_data.py  test_error_handling.py  test_message_123.py  test_sqllike_filter.py  test_vdm_sentence.py  test_writer.py
