[project]
name = "aisdecoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Giampaolo Cimino", email = "gcimino@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "libais>=0.17",
    "matplotlib>=3.10.0",
]

[project.scripts]
aisdecoder = "aisdecoder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "assertpy>=1.1",
    "deptry>=0.22.0",
    "mypy>=1.14.1",
]
